<resources>
    <string name="app_name">Nairobi GitHub Users</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="title_activity_detail_view">User Profile</string>
    <string name="username_field">Username</string>
    <string name="bio">Bio</string>
    <string name="public_repos">Public Repos</string>
    <string name="company_field">Company</string>
    <string name="share">Share</string>
    <string name="bio_default_text">Not Available</string>
    <string name="company_default_text">None</string>
    <string name="refresh_text">Refresh</string>
    <string name="network_failure_message">No Network Connection</string>
    <string name="click_to_refresh">TRY AGAIN</string>
</resources>
