...
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.DetailViewActivity"
    tools:showIn="@layout/activity_detail_view">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/detail_view_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
